--- a/style.ini.dist
+++ b/style.ini.dist
@@ -20,10 +20,18 @@ design.css         = screen
 ; give your wiki a new look.
 [replacements]
 
+;-------------------------------------
 ; widths for main body part
 __left_sidebar_width__=15%
 __page_width__=65%
 __page_margin__=2%
 __right_sidebar_width__=15%
+
+
+;-------------------------------------
+; colors
+__text_neu__       = "#666"
+__background_neu__ = "white"
+
 
 ; setup vim: ts=2 sw=2:
