commit kluboj kaj renkontigxoj for a while

--- a/menu.php.dist
+++ b/menu.php.dist
@@ -1,8 +1,10 @@
 
 <li class="uconstr"><?php tpl_link(wl('pri_ni:komenco'), $lang['kunlaborejo_about']) ?> </li>
 <li><?php tpl_link(wl('projektoj:komenco'), $lang['kunlaborejo_projects']) ?></li>
+<?php /*
 <li class="uconstr"><?php tpl_link(wl('kluboj:komenco'), $lang['kunlaborejo_clubs']) ?></li>
 <li class="uconstr"><?php tpl_link(wl('renkontigxoj:komenco'), $lang['kunlaborejo_meets']) ?></li>
+*/ ?>
 <li class="uconstr"><?php tpl_link(wl('helpo:komenco'), $lang['kunlaborejo_help']) ?></li>
 
 <?php if (actionOK('admin')) { ?>
